// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`attrs does not pass non html tags to HTML element 1`] = `
<div
  className="sc-b c"
/>
`;

exports[`attrs merge attrs 1`] = `
<button
  className="sc-a b"
  tabIndex={0}
  type="submit"
/>
`;

exports[`attrs merge attrs when inheriting SC 1`] = `
<button
  className="sc-b c"
  tabIndex={0}
  type="submit"
/>
`;

exports[`attrs pass a React component 1`] = `
<button>
  <p>
    React Component
  </p>
</button>
`;

exports[`attrs pass a simple attr via function with object return 1`] = `
<button
  className="sc-a b"
  type="button"
/>
`;

exports[`attrs pass a simple attr via object 1`] = `
<button
  className="sc-a b"
  type="button"
/>
`;

exports[`attrs pass attrs to style block 1`] = `
<a
  className="sc-a b"
  data-active-class-name="--is-active"
  href="#"
/>
`;

exports[`attrs pass props to the attr function 1`] = `
<button
  className="sc-a b"
  type="button"
/>
`;

exports[`attrs pass props to the attr function 2`] = `
<button
  className="sc-a b"
  type="submit"
/>
`;

exports[`attrs should merge className 1`] = `
<div
  className="sc-a b meow nya"
/>
`;

exports[`attrs should merge className even if its a function 1`] = `
<div
  className="sc-a b meow nya"
/>
`;

exports[`attrs should merge className even if its a function 2`] = `
<div
  className="sc-a b meow purr"
/>
`;

exports[`attrs should override children of course 1`] = `
<div
  className="sc-a b"
>
  Something else
</div>
`;

exports[`attrs should pass through children as a normal prop 1`] = `
<div
  className="sc-a b"
>
  Probably a bad idea
</div>
`;

exports[`attrs should pass through complex children as well 1`] = `
<div
  className="sc-a b"
>
  <span>
    Probably a bad idea
  </span>
</div>
`;

exports[`attrs should replace attrs with props 1`] = `
<button
  className="sc-a b"
  tabIndex={0}
  type="button"
/>
`;

exports[`attrs should replace attrs with props 2`] = `
<button
  className="sc-a b"
  tabIndex={0}
  type="reset"
/>
`;

exports[`attrs should replace attrs with props 3`] = `
<button
  className="sc-a b"
  tabIndex="-1"
  type="reset"
/>
`;

exports[`attrs should work with data and aria attributes 1`] = `
<div
  aria-label="A simple FooBar"
  className="sc-a b"
  data-foo="bar"
/>
`;

exports[`attrs work fine with a function that returns an empty object 1`] = `
<div
  className="sc-a b"
/>
`;

exports[`attrs work fine with an empty object 1`] = `
<div
  className="sc-a b"
/>
`;
